--- a/associados.html
+++ b/associados.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     
     <link rel="icon" type="image/jpg" href="Images/icon.png" />
-    <link rel="stylesheet" href="CSS/style.css" type="text/css">
+    <link rel="stylesheet" href="Css/style.css" type="text/css">
     <script src="JS/script.js"></script>
     <title>Lavricartaxo</title>
 </head>
@@ -39,24 +39,9 @@
       <li class="menuText"><a href="associados.html" >ASSOCIADOS</a></li>   
     </ul>
   </nav>
-  <div class="main">
-    <div class="welcome"> 
-
+    <div class="welcome">
+    
     </div>
-      <p>a</p>
-      <p>a</p>
-      <p>a</p>
-      <p>a</p>
-      <p>a</p>
-      <p>a</p>
-      <p>a</p>
-      <p>a</p>
-      <p>a</p>
-      <p>a</p>
-      <p>a</p>
-      <p>a</p>
-      <p>a</p>
-  </div>
   <footer>
     <div>
       <div class="row">
