--- a/contatos.html
+++ b/contatos.html
@@ -39,21 +39,22 @@
           <li class="menuText"><a href="associados.html" >ASSOCIADOS</a></li>   
         </ul>
       </nav>
-  <div class="main">
-      <div class="welcome">
+    <div class="welcome">
+      <div class="info">
         <div class="mapa">
           <h2></br>Encontre-nos aqui</h2>
           <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12373.9691393483!2d-8.791160000000001!3d39.163528!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb27463f5a3d96d77!2sLavricartaxo-Cooperativa%20Agro-Pecu%C3%A1ria%20do%20Cartaxo%20C.R.L.!5e0!3m2!1spt-PT!2spt!4v1616068831267!5m2!1spt-PT!2spt" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-      </div>
-      <div class="col-sm-6">
-          <h2></br>Endereço </h2>
-          <ul class="contact-info">
-              <li class="contact-info"><span> Address:</span>Rua Batalhoz, n.81 </li></br>
-              <li class="contact-info"><span> Código Postal:</span> 2070-069 Cartaxo Portugal </li></br>
-              <li class="contact-info"><span> Telefone:</span> (351) 243 700 240 </li></br>
-              <li class="contact-info"><span> Fax:</span> (351) 243 700 249 </li></br>
-              <li class="contact-info"><span> Email:</span><a href="geral@lavricartaxo.pt" class="contact-info"> geral@lavricartaxo.pt</a></li>
-          </ul>                            
+        </div>
+        <div class="col-sm-6" class="contact-address">
+            <h2></br>Endereço </h2>
+            <ul>
+                <li class="contact-info"><span> Address:</span>Rua Batalhoz, n.81 </li></br>
+                <li class="contact-info"><span> Código Postal:</span> 2070-069 Cartaxo Portugal </li></br>
+                <li class="contact-info"><span> Telefone:</span> (351) 243 700 240 </li></br>
+                <li class="contact-info"><span> Fax:</span> (351) 243 700 249 </li></br>
+                <li class="contact-info"><span> Email:</span><a href="geral@lavricartaxo.pt" class="contact-a"> geral@lavricartaxo.pt</a></li>
+            </ul>                            
+        </div>
       </div>
       <div class="col-sm-6">
         <h2></br>Contacte-nos</br></br></h2>
@@ -61,30 +62,30 @@
       <form>
         <div class="form-group">
           <label for="nome">Nome</label>
-          <input type="text" class="form-control" id="nome">
+          <input type="text" class="form-control" id="nome" required>
         </div>
         <div class="form-group">
           <label for="local">Local</label>
-          <input type="text" class="form-control" id="local">
+          <input type="text" class="form-control" id="local" required>
         </div>
         <div class="form-group">
           <label for="email">Email</label>
-          <input type="email" class="form-control" id="email">
+          <input type="email" class="form-control" id="email"required>
         </div>
         <div class="form-group">
           <label for="telefone">Telefone</label>
-          <input type="tel" class="form-control" id="telefone">
+          <input type="tel" class="form-control" id="telefone" required>
         </div>
         <div class="form-group">
           <label for="assunto">Assunto</label>
-          <input type="text" class="form-control" id="assunto">
+          <input type="text" class="form-control" id="assunto" required>
         </div>
         <div class="form-group">
           <label for="mensagem">Mensagem</label>
-          <textarea class="form-control" id="mensagem" rows="3"></textarea>
+          <textarea class="form-control" id="mensagem" rows="3" required></textarea>
         </div>
-        <button type="submit" class="btn btn-primary" >Submeter</button>
-        <button type="submit" class="btn btn-danger">Limpar</button>
+        <button type="submit" class="btn btn-primary" class="btn">Submeter</button>
+        <button type="reset" class="btn btn-danger" >Limpar</button>
       </form>
     </div>
   <footer>
