--- a/contatos.html
+++ b/contatos.html
@@ -58,7 +58,7 @@
   <!-- Contact Section -->
   <section id="contact">
     <div class="contact container">
-      <div><h1 class="section-title">Informações <span>de contacto</span></h1></div>
+    </br><div><h1 class="section-title">Informações <span>de contacto</span></h1></div>
       <div class="contact-items">
         <div class="contact-item">
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png"/></div>
