--- a/contatos.html
+++ b/contatos.html
@@ -118,33 +118,26 @@
           <label for="mensagem">Mensagem</label>
           <textarea class="form-control" id="mensagem" rows="3" required></textarea>
         </div>
+        <br>
         <button type="submit" class="btn btn-primary" class="btn">Submeter</button>
-        <button type="reset" class="btn btn-danger" >Limpar</button>
+        <button type="reset" class="btn btn-danger" >Limpar</button>       
       </form>
+      <br>
     </div>
-  <footer>
-    <div>
-      <div class="row">
-        <div class="col-sm-6">
-          <p>LAVRICARTAXO-Cooperativa Agro-Pecuaria do Cartaxo, C.R.L.</br>Rua Batalhoz nr.81</br>2070-069 Cartaxo</p>
-        </div>
-        <div class="col-sm-6">
-          <p></br>243 700 240</br></p>
-        </div>
-        <div class="col-sm-6">
-          <p>243 700 249</br></br></p>
-        </div>
-        <div class="col-sm-6">
-          <p>De Segunda a Sexta-feira das 9H ás 13H e das 14.30H ás 18.30H</br>Aos Sábados das 9H ás 12.30H</p>
-        </div>
-        <div class="col-sm-6">
-          </br>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.
-        </div>
-        <div class="col-sm-6">
-          <p></br>Desenvolvimento e Design:<a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
-        </div>
       </div>
-    </div>
+    <footer class="footerBottom">
+      <div class="wheretofindusFooter">
+        <p>ONDE NOS ENCONTRAR:<br><br>Rua Batalhoz nr.81<br>2070-069 Cartaxo</p>
+      </div>
+      <div class="contactusFooter">
+        <p>CONTACTE-NOS<br><br>700 240<br>243 700 249</p>
+      </div>
+      <div class="openFooter">
+        <p>ABERTOS:<br><br>De Segunda a Sexta-feira das 9H ás 13H e das 14.30H ás 18.30H</br>Aos Sábados das 9H ás 12.30H</p>
+      </div>
+        <br><br><br><br><br><br>
+        <p>Copyright &copy; 2021 Lavricartaxo-Cooperativa Agro-Pecuária do Cartaxo, C.R.L.</p>
+        <p>Desenvolvimento e Design:<a href="https://www.analogia.net/?opx=entrar">ANALOGIA.NET</a></p>
   </footer>
 </body>
 </html>
